# Truth-Stamp

./: .gitignore  README.md
FlightGuard-main/: README.md
FlightGuard-main/contracts/FlightGuard/: Cargo.toml
FlightGuard-main/contracts/FlightGuard/src/: lib.rs  test.rs
FlightGuard-main/contracts/FlightGuard/test_snapshots/test/: test_double_claim_rejected.1.json  test_happy_path_full_lifecycle.1.json  test_no_payout_when_delay_below_threshold.1.json  test_policy_settled_flag_after_oracle_payout.1.json  test_unauthorized_oracle_rejected.1.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/flight-guard/: AppSidebar.tsx  AuthCard.tsx  CodeVault.tsx  DevConsole.tsx  MoneyGramMap.tsx  PolicyLedger.tsx  Sections.tsx  Simulator.tsx
dashboard/src/components/ui/: sonner.tsx
dashboard/src/lib/: stellar.ts
dashboard/src/lib/flight-guard-client/: README.md  package-lock.json  package.json
dashboard/src/lib/flight-guard-client/src/: index.ts
dashboard/src/pages/: Index.tsx
