[package]
name        = "FlightGuard"
version     = "0.1.0"
edition     = "2021"
description = "Parametric flight delay insurance on Stellar using Soroban"
license     = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
[dependencies]
soroban-sdk = "20.0.0"

# ---------------------------------------------------------------------------
# Test-only dependencies (enables testutils + mock environment)
# ---------------------------------------------------------------------------
[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

# ---------------------------------------------------------------------------
# Release profile — optimized for Wasm output size and correctness
# ---------------------------------------------------------------------------
[profile.release]
opt-level        = "z"     # minimize binary size
overflow-checks  = true    # keep checked arithmetic in release
debug            = false
strip            = "symbols"
debug-assertions = false
panic            = "abort"  # required for Wasm — no unwinding
codegen-units    = 1        # single codegen unit for best LTO
lto              = true     # link-time optimization